--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="icon" href="img/cropped-boefjes-192x192.png" sizes="192x192">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,10 +54,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
+                    <div class="lgreen"></div>
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Proces</a>
-                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
+                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0 dgreen">
                             <a href="#" class="dropdown-item">Tarieven</a>
                             <a href="#" class="dropdown-item">Wenprocedure</a>
                             <a href="#" class="dropdown-item">Zieke kinderen</a>
@@ -67,7 +68,7 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">De Boefjes</a>
-                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
+                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0 dgreen">
                             <a href="#" class="dropdown-item">Dagindeling</a>
                             <a href="#" class="dropdown-item">De groep</a>
                             <a href="#" class="dropdown-item">Ons team</a>
@@ -79,7 +80,7 @@
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Kwaliteit</a>
-                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
+                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0 dgreen">
                             <a href="#" class="dropdown-item">Pedagogisch beleid</a>
                             <a href="#" class="dropdown-item">Gezond en veilig klimaat</a>
                             <a href="#" class="dropdown-item">Vier- ogen principe</a>
@@ -92,7 +93,7 @@
                     <a href="#" class="nav-item nav-link">Reviews</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact</a>
-                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
+                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0 dgreen">
                             <a href="#" class="dropdown-item">Inschrijven</a>
                             <a href="#" class="dropdown-item">Rondleiding</a>
                         </div>
