--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner" class="show bg-transparent position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -44,7 +44,7 @@
         <div class="text-right phone callme"><strong><i class="fa fa-phone" aria-hidden="true" style="font-size: 90%;"></i> 020 470 88 42</strong></div>
         <!-- Navbar Start -->
         
-        <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0">
+        <nav class="navbar navbar-expand-lg lgr-bg navbar-light sticky-top px-4 px-lg-5 py-lg-0">
             <div class="beginnav"></div><!-- /*MOD MOD MOD*/ -->
             <a href="index.html" class="navbar-brand">
                 <!-- /*MOD MOD MOD*/ -->
@@ -58,7 +58,7 @@
                 <div class="navbar-nav mx-auto">
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link " data-bs-toggle="dropdown">Proces</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Proces</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0 dgreen">
                             <a href="#" class="dropdown-item">Tarieven</a>
                             <a href="#" class="dropdown-item">Wenprocedure</a>
