--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="icon" href="./img/cropped-boefjes-32x32.png" sizes="32x32" />
+    <link rel="icon" href="./img/cropped-boefjes-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="./img/cropped-boefjes-180x180.png" />
+    <meta name="msapplication-TileImage" content="./img/cropped-boefjes-270x270.png" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
