--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <a href="#" class="nav-item nav-link">English</a>
                    </div>
                 <a href="#" class="btn btn-primary rounded-pill px-3 d-none d-lg-block text-nowrap">Direct Inschrijven<i class="fa fa-arrow-right ms-3"></i></a><!-- /*MOD MOD MOD*/ -->
-              <div class="bg-white rounded-0"><div class="endnav "></div></div>
+              <div class=" rounded-0"><div class="endnav "></div></div>
             </div>
             </nav>
            
